--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1885,15 +1885,44 @@
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
   <h2 id="h_4">References</h2>
-  <h3 id="h_6_2">Legislation and Court cases</h3>
-  <dl class="dl-horizontal">
-    <dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt>
+
+<h3 id="h_6_1">Supreme Court of Canada</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+ <dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt>
     <dd>Supreme Court - 671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
-    <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt>
+</dl>
+</div>
+</div>
+
+<h3 id="h_6_2">Federal Court of Appeal</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt>
     <dd>Federal Court of Appeal - Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
     <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
     <dd>Federal Court of Appeal - Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
-    <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-5/#wb-cont">CEA 2</a> </dt>
+</dl>
+</div>
+</div>
+
+
+<h3 id="h_6_3">Tax Court of Canada</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+
+</dl>
+</div>
+</div>
+
+<h3 id="h_6_1">Legislation</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+  <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-5/#wb-cont">CEA 2</a> </dt>
     <dd>Canada Evidence Act, R.S., 1985, c. C-5</dd>
     <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/l-2/#wb-cont">CLC 4</a> </dt>
     <dd>Canada Labour Code</dd>
@@ -1907,7 +1936,7 @@
     <dd>Interpretation Act, R.S.C. (1985), ch. I-21 (enacted by S.C. 2001, ch. 4)</dd>
     <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/t-2/index.html#wb-cont">TCCA 12(1)</a> </dt>
     <dd>Tax Court of Canada Act, R.S., 1985, c.T-2</dd>
-    <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-1.html#h-279779">ITA: 5(1)</a> </dt>
+  <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-1.html#h-279779">ITA: 5(1)</a> </dt>
     <dd>Income from an office or employment </dd>
     <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-99.html#h-1386438">ITA: 125(7)</a> </dt>
     <dd>Definition of a personal services business </dd>
@@ -1929,7 +1958,11 @@
     <dd>Barbers and hairdressers</dd>
     <dt><a href="">IECPR: 9</a> </dt>
     <dd>Taxi drivers</dd>
-  </dl>
+</dl>
+</div>
+</div>
+  
+  
   <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">
     <header class="modal-header">
       <h2 class="modal-title">What is considered a personal services business (PSB)</h2>
