--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1891,7 +1891,7 @@
 <div class="col-xs-12">
 <dl class="dl-horizontal">
  <dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt>
-    <dd>Supreme Court - 671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
+    <dd>671122 Ontario Ltd. v. Sagaz Industries Canada Inc. [2001]</dd>
 </dl>
 </div>
 </div>
@@ -1901,9 +1901,9 @@
 <div class="col-xs-12">
 <dl class="dl-horizontal">
   <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt>
-    <dd>Federal Court of Appeal - Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
+    <dd>Royal Winnipeg Ballet v. Canada (M.N.R.) [2006]</dd>
     <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
-    <dd>Federal Court of Appeal - Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
+    <dd>Lawrence Wolf v. M.N.R [2002]</dd>
 </dl>
 </div>
 </div>
@@ -1913,12 +1913,13 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-
+  <dt><a href="https://decision.tcc-cci.gc.ca/tcc-cci/decisions/en/item/30395/index.do">2010-2399(EI)</a> </dt>
+    <dd>The Girls Gym of Canada Ltd v. MNR [2011] - Intent (factor 1)</dd>
 </dl>
 </div>
 </div>
 
-<h3 id="h_6_1">Legislation</h3>
+<h3 id="h_6_4">Legislation</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
@@ -1944,19 +1945,19 @@
     <dd>Definition of a specified shareholder</dd>
     <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/index.html#wb-cont">CPP: 2(1)</a> </dt>
     <dd>Definition of employment </dd>
-    <dt><a href="">CPPR: 8.1(1)</a> </dt>
-    <dd>Add description </dd>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-2.html#h-552497">CPPR: 8.1(1)</a> </dt>
+    <dd>Deemed employer</dd>
     <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt>
     <dd>Definition of employment</dd>
-    <dt><a href="">IECPR: 1(2) and 10(1)</a> </dt>
-    <dd>Add description</dd>
-    <dt><a href="">IECPR: 5 and 6</a> </dt>
-    <dd>Add description</dd>
-    <dt><a href="">IECPR: 7</a> </dt>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html#h-1006041">IECPR: 1(2)</a> and <a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">10(1)</a> </dt>
+    <dd>Deemed employer</dd>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html#h-1006041">IECPR: 5 and 6</a> </dt>
+    <dd>Deemed employer</dd>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 7</a> </dt>
     <dd>Placement or employment agencies</dd>
-    <dt><a href="">IECPR: 8</a> </dt>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 8</a> </dt>
     <dd>Barbers and hairdressers</dd>
-    <dt><a href="">IECPR: 9</a> </dt>
+    <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 9</a> </dt>
     <dd>Taxi drivers</dd>
 </dl>
 </div>
