--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1900,12 +1900,16 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
+  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/36399/index.do">A-291-08</a> </dt>
+    <dd>NCJ Educational Services Limited v. Canada (M.N.R.) [2009] - Control (factor 2)</dd>
   <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/36311/index.do">A-39-08</a> </dt>
     <dd>Grimard v. Canada (M.N.R.) [2009] - Control (factor 2)</dd>
   <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/36177/index.do">A-540-07</a> </dt>
     <dd>Kilbride v. Canada [2008] - Intent (factor 1)</dd>
   <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt>
     <dd>Royal Winnipeg Ballet v. Canada (M.N.R.) [2006]</dd>
+ <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/32078/index.do">A-512-02</a> </dt>
+    <dd>D & J Driveway Inc. v. Canada (M.N.R) [2003] - Control (factor 2)</dd>
  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34662/index.do">A-38-01</a> </dt>
     <dd>Canada v. Groupe Desmarais Pinsonneault & Avard Inc. [2002] - Control (factor 2)</dd>
     <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
