--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1910,10 +1910,15 @@
     <dd>Royal Winnipeg Ballet v. Canada (M.N.R.) [2006]</dd>
  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/32078/index.do">A-512-02</a> </dt>
     <dd>D & J Driveway Inc. v. Canada (M.N.R) [2003] - Control (factor 2)</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34669/index.do">A-430-02</a> </dt>
+    <dd>Shaw Communications Inc. v. Canada (M.N.R) [2003] - Risk (factor 5) and Profit (factor 7)</dd>
+  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
+    <dd>Lawrence Wolf v. M.N.R [2002]</dd>  
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33460/index.do">A-79-01</a> </dt>
+    <dd>Precision Gutters Ltd v. Canada (M.N.R) [2002] - Tools (factor 3)</dd>
  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34662/index.do">A-38-01</a> </dt>
     <dd>Canada v. Groupe Desmarais Pinsonneault & Avard Inc. [2002] - Control (factor 2)</dd>
-    <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
-    <dd>Lawrence Wolf v. M.N.R [2002]</dd>
+  
 </dl>
 </div>
 </div>
@@ -1923,8 +1928,11 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
+<dt><a href="https://decision.tcc-cci.gc.ca/tcc-cci/decisions/en/item/30442/index.do">	2010-2371(EI)</a> </dt>
+    <dd>Watzke v. M.N.R – [2011] - Tools (factor 3), Risk (factor 5) and Profit (factor 7)</dd>
   <dt><a href="https://decision.tcc-cci.gc.ca/tcc-cci/decisions/en/item/30395/index.do">2010-2399(EI)</a> </dt>
     <dd>The Girls Gym of Canada Ltd v. MNR [2011] - Intent (factor 1)</dd>
+
 </dl>
 </div>
 </div>
