--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1915,7 +1915,7 @@
   <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt>
     <dd>Lawrence Wolf v. M.N.R [2002]</dd>  
 <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33460/index.do">A-79-01</a> </dt>
-    <dd>Precision Gutters Ltd v. Canada (M.N.R) [2002] - Tools (factor 3)</dd>
+    <dd>Precision Gutters Ltd v. Canada (M.N.R) [2002] - Tools (factor 3) and Risk (factor 5)</dd>
  <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34662/index.do">A-38-01</a> </dt>
     <dd>Canada v. Groupe Desmarais Pinsonneault & Avard Inc. [2002] - Control (factor 2)</dd>
   
