--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -287,7 +287,7 @@
 
 </div>
 
-<p class="mrgn-bttm-lg">Generally, if you provide to your employee distintive clothing, protective clothing, safety footwear or safety glasses, or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a>, including the cost related to laundry or dry cleaning, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
+<p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
   <h2 class="h3">On this page</h2>
   	
 <ul>
@@ -300,8 +300,8 @@
 <h2 id="stps">Steps</h2>
 
 <ol class="lst-stps stps-strpd">
-<li><h3 id="step1">Determine if the benefit provided is considered a distinctive uniform or protecting clothing</h3>
-<p>Under the CRA's administrative policy, the benefit is considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following apply:</p>
+<li><h3 id="step1">Determine if the benefit provided relates to a distinctive uniform or protective clothing</h3>
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protectve clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
@@ -314,25 +314,29 @@
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not</strong> meet the conditions above, the benefit is <strong>taxable</strong>.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not</strong> relate to a distinctive uniform or protective clothing, the benefit is <strong>taxable</strong>.</p>
 <p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a>.</p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protective clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a>.</li>
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable, including if the cost related to laundry or dry cleaning, if <strong>all</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if it is considered a <strong>distinctive uniform or protective clothing, safety footwear and safety glasses</strong> (step 1) and one of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">You provide your employee with a uniform or clothing</li>
+<li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
+<li class="cnjnctn-col">You reimburse an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
+<li class="cnjnctn-col">If you provide an allowance for protective clothing and did not require receipts to support the purchases:
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Benefit provided meets <strong>all conditions</strong> of a distinctive uniform or protecting clothing, safety footwear and safety glass</li>
-<li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
-<li class="cnjnctn-col">If provided an allowance:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
+<li class="cnjnctn-col">Your employee used the allowance to buy protective clothing</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
+<li class="cnjnctn-col">The amount of the allowance is reasonable</li>
 </ul></li>
-<li class="cnjnctn-col">If you reimbursed or provided an accountable advance:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
+
+<li class="cnjnctn-col">If you reimbursed or provided an accountable advance to buy uniforms and protective clothing:
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">You received a copy of the receipts for the purchases from your employee</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
+<li class="cnjnctn-col">The cost of the uniforms or protective clothing is reasonable</li>
 </ul></li></ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
