--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -326,14 +326,14 @@
 <li class="cnjnctn-col">You provide your employee with a uniform or clothing</li>
 <li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
 <li class="cnjnctn-col">You reimburse an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
-<li class="cnjnctn-col">You provide an allowance for protective clothing and did not require receipts to support the purchases:
+<li class="cnjnctn-col"><p>You provide an allowance for protective clothing and did not require receipts to support the purchases:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Your employee used the allowance to buy protective clothing</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
 <li class="cnjnctn-col">The amount of the allowance is reasonable</li>
 </ul></li>
 
-<li class="cnjnctn-col">You reimbursed or provided an accountable advance to buy uniforms and protective clothing:
+<li class="cnjnctn-col"><p>You reimbursed or provided an accountable advance to buy uniforms and protective clothing:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">You received a copy of the receipts for the purchases from your employee</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
