--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -301,7 +301,7 @@
 
 <ol class="lst-stps stps-strpd">
 <li><h3 id="step1">Determine if the benefit provided relates to a distinctive uniform or protective clothing</h3>
-<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protectve clothing if <strong>one</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
@@ -323,7 +323,7 @@
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if it is considered a <strong>distinctive uniform or protective clothing, safety footwear and safety glasses</strong> (step 1) and one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">You provide your employee with a uniform or clothing</li>
+<li class="cnjnctn-col">You provide your employee with a distinctive uniform or protective clothing</li>
 <li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
 <li class="cnjnctn-col">You reimburse an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
 <li class="cnjnctn-col"><p>You provide an allowance for protective clothing and did not require receipts to support the purchases:</p>
