--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -325,20 +325,22 @@
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">You provide your employee with a distinctive uniform or protective clothing</li>
 <li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
-<li class="cnjnctn-col">You reimburse an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
-<li class="cnjnctn-col"><p>You provide an allowance for protective clothing and did not require receipts to support the purchases:</p>
+<li class="cnjnctn-col">You <strong>reimburse</strong> an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
+
+<li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of protective clothing and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">Your employee used the allowance to buy protective clothing</li>
+<li class="cnjnctn-col">Your employee used the allowance to purchase protective clothing</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
-<li class="cnjnctn-col">The amount of the allowance is reasonable</li>
+<li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
 </ul></li>
 
-<li class="cnjnctn-col"><p>You reimbursed or provided an accountable advance to buy uniforms and protective clothing:</p>
+<li class="cnjnctn-col"><p>You provide an <strong>accountable advance</strong> or you <strong>reimburse</strong> your employee for the cost of a distinctive uniform or protective clothing and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">You received a copy of the receipts for the purchases from your employee</li>
+<li class="cnjnctn-col">You received a copy of the receipts from your employee to confirm the amounts paid</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
-<li class="cnjnctn-col">The cost of the uniforms or protective clothing is reasonable</li>
-</ul></li></ul>
+<li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
+</ul></li>
+</ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations.</p>
