--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -327,14 +327,14 @@
 <li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
 <li class="cnjnctn-col">You <strong>reimburse</strong> an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
 
-<li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of protective clothing and all of the following apply:</p>
+<li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of <strong>protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Your employee used the allowance to purchase protective clothing</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
 <li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
 </ul></li>
 
-<li class="cnjnctn-col"><p>You provide an <strong>accountable advance</strong> or you <strong>reimburse</strong> your employee for the cost of a distinctive uniform or protective clothing and all of the following apply:</p>
+<li class="cnjnctn-col"><p>You provide an <strong>accountable advance</strong> or you <strong>reimburse</strong> your employee for the cost of a <strong>distinctive uniform or protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">You received a copy of the receipts from your employee to confirm the amounts paid</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
