--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -323,9 +323,10 @@
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if it is considered a <strong>distinctive uniform or protective clothing, safety footwear and safety glasses</strong> (step 1) and one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">You provide your employee with a distinctive uniform or protective clothing</li>
-<li class="cnjnctn-col">You pay a laundry or dry cleaner or provide a reasonable allowance to your employee to clean uniforms and protective clothing</li>
-<li class="cnjnctn-col">You <strong>reimburse</strong> an employee for the expenses of laundry or dry cleaning when they provide a receipt</li>
+<li class="cnjnctn-col">You <strong> provide</strong> your employee with a <strong> distinctive uniform or protective clothing</strong> </li>
+<li class="cnjnctn-col">You <strong>pay</strong> or provide a <strong>reasonable allowance</strong> for services related to <strong>laundry or dry cleaning services</strong> to your employee to clean a distinctive uniform or protective clothing</li>
+
+<li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> and you received a copy of the receipts from your employee to confirm the amount paid</li>
 
 <li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of <strong>protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -334,9 +335,9 @@
 <li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
 </ul></li>
 
-<li class="cnjnctn-col"><p>You provide an <strong>accountable advance</strong> or you <strong>reimburse</strong> your employee for the cost of a <strong>distinctive uniform or protective clothing</strong> and all of the following apply:</p>
+<li class="cnjnctn-col"><p>You <strong>reimburse</strong> or provide an <strong>accountable advance</strong> to your employee for the cost of a <strong>distinctive uniform or protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">You received a copy of the receipts from your employee to confirm the amounts paid</li>
+<li class="cnjnctn-col">You received a copy of the receipt from your employee to confirm the amount paid</li>
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
 <li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
 </ul></li>
