--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -324,9 +324,9 @@
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if it is considered a <strong>distinctive uniform or protective clothing, safety footwear and safety glasses</strong> (step 1) and one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">You <strong> provide</strong> your employee with a <strong> distinctive uniform or protective clothing</strong> </li>
-<li class="cnjnctn-col">You <strong>pay</strong> or provide a <strong>reasonable allowance</strong> for services related to <strong>laundry or dry cleaning services</strong> to your employee to clean a distinctive uniform or protective clothing</li>
+<li class="cnjnctn-col">You <strong>pay</strong> or provide a <strong>reasonable allowance</strong> for services related to <strong>laundry or dry cleaning</strong> to your employee to clean a distinctive uniform or protective clothing</li>
 
-<li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> and you received a copy of the receipts from your employee to confirm the amount paid</li>
+<li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> to clean a distinctive uniform or protective clothing and you received a copy of the receipts from your employee to confirm the amount paid</li>
 
 <li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of <strong>protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
