--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -308,7 +308,7 @@
 <li class="cnjnctn-col">Your employee must wear while carrying out the employment duties</li>
 <li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
-<li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
+<li class="cnjnctn-col"><h4 class="text-muted">Protective clothing (including safety footwear and safety glasses)</h4> 
 <p>It is designed to protect your employee from hazards associated with their employment</p>
 </li>
 </ul>
