--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -287,20 +287,24 @@
 
 </div>
 
-<p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
   <h2 class="h3">On this page</h2>
   	
 <ul>
 
-<li><a href="#step1">Steps</a></li>
-<li><a href="#h_5">References</a></li>
+<li><a href="#h_1">Determine if the benefit is taxable</a>
+</li>
+<li><a href="#h_2">Calculate the value of the benefit</a>
+</li>
+<li><a href="#h_3">Withhold payroll deductions and remit GST/HST</a></li>
+<li><a href="#h_4">Report the benefit on a slip</a></li>
+<li><a href="#h_5">References</a>
+</li>
 </ul>
 
+<h2 id="h_1">Determine if the benefit is taxable</h2>
+<p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
 
-<h2 id="stps">Steps</h2>
-
-<ol class="lst-stps stps-strpd">
-<li><h3 id="step1">Determine if the benefit provided relates to a distinctive uniform or protective clothing</h3>
+<details><summary>What is considered a distinctive uniform or protective clothing</summary>
 <p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
@@ -312,15 +316,8 @@
 <p>It is designed to protect your employee from hazards associated with their employment</p>
 </li>
 </ul>
-<hr>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not</strong> relate to a distinctive uniform or protective clothing, the benefit is <strong>taxable</strong>.</p>
-<p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a>.</p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protective clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a>.</li>
-</ul>
-</li>
+</details>
 
-<li><h3 id="step2">Determine if the benefit is taxable</h3>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">You <strong> provide</strong> your employee with a <strong> distinctive uniform</strong> or <strong> protective clothing</strong> </li>
@@ -340,16 +337,9 @@
 
 <li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> to clean a <strong> distinctive uniform</strong> or <strong> protective clothing</strong> and you received a copy of the receipts from your employee to confirm the amount paid</li>
 </ul>
-<hr>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations.</p>
-<p><strong>Do not</strong> continue to next step. </p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a>.</li>
-</ul>
-</li>
 
 
-<li><h3 id="step3">Calculate the value of the benefit</h3>
+<h2 id="h_2">Calculate the value of the benefit</h2>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
@@ -375,18 +365,12 @@
                   </ul>
 
 <p>The amounts must be included in the pay period they were received or enjoyed. </p>
-</li>
-<li><h3 id="step4">Withhold payroll deductions and remit GST/HST</h3>
+
+<h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
   <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>	
-</li>
 
-<li><h3 id="step5">Report the benefit on a slip</h3>
+<h2 id="h_4">Report the benefit on a slip</h2>
 <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/report.txt"></div>
-</li>
-
-</ol>
-
-
 
 	 
 		 
