--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -304,7 +304,7 @@
 <h2 id="h_1">Determine if the benefit is taxable</h2>
 <p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
 
-<details><summary>What is considered a distinctive uniform or protective clothing</summary>
+<details><summary>What is considered a distinctive uniform or protective clothing (including safety footwear and safety glasses)</summary>
 <p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
