--- a/payroll/calculate/benefit/social.html
+++ b/payroll/calculate/benefit/social.html
@@ -316,7 +316,7 @@
 <h4>Non-taxable situation</h4>
 <p> Under the CRA's administrative policy, if you provide a free party or other in-person social event, the benefit is not taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">It is available to all employees </li>
+<li class="cnjnctn-col">It is available to all employees (at an employer's place of business, which can mean a branch or division depending on the situation)</li>
 <li class="cnjnctn-col">Cost is <strong>$150 or less (including taxes) per person:</strong> <ul><li>
 persons includes spouses or common-law partners </li>
 <li>
@@ -339,7 +339,7 @@ ancillary costs (such as transportation home, taxi fare, and overnight accommoda
 <p> Under the CRA's administrative policy, if you provide or reimburse for a virtual social event, the benefit is not taxable if <strong>all</strong> of the following apply:</p>
 			 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">It is available to all employees </li>
+<li class="cnjnctn-col">It is available to all employees (at an employer's place of business, which can mean a branch or division depending on the situation)</li>
 <li class="cnjnctn-col">If the virtual social event:
 <ul class="list-unstyled cnjnctn-type-or  cnjnctn-sm mrgn-lft-xl">
 <li class="cnjnctn-col"><strong>Only </strong>includes meals, beverages and delivery services, the total cost is <strong>$50 or less (including taxes) per employee</strong> </li>
