--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -289,7 +289,7 @@
 
 <p>You may provide educational assistance to your employee, a former employee or an employee's family member. </p>
 
-<details><summary>Example</summary>
+<details><summary>Examples of educational assistance</summary>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Reimbursement or payment of tuition and training fees </li>
 <li><span class="fas fa-check fa-li text-success"></span> Scholarships and bursaries </li>
@@ -330,8 +330,7 @@
 <h4 id="current">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide or reimburse for a course, a program, or training to your current or former employee, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee returns to work for you for a reasonable amount of time after the completion of the course, program or training</li>
-<li class="cnjnctn-col">You must be able to justify your position regarding the length of the period of time being reasonable</li>
+<li class="cnjnctn-col">Your employee returns to work for you for a reasonable amount of time after the completion of the course, program or training, you must be able to justify your position regarding the length of the period of time being reasonable</li>
 <li class="cnjnctn-col"><p>The course, program or training is for <strong>one</strong> of the following employment-related purposes: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#specific" aria-controls="centred-popup" class="wb-lbx" role="button">Specific&nbsp;<span class="far fa-question-circle"></span></a></li>
@@ -341,6 +340,7 @@
 </ul>
 <p>You must be able to <strong>clearly demonstrate you are the primary beneficiary of the expense</strong>.</p>
 <p>If the benefit is <strong>not</strong> taxable and you paid for the expense, your employee <strong>cannot claim </strong>the non-refundable tuition tax credit, or the educational amount, on their T1 return.</p>
+
 <details><summary>What is specific employment-related, general employment-related or personal interest training</summary>
 <p>The CRA considers there are 3 categories of training:  </p>
 <ul class="list-unstyled cnjnctn-type-and">
@@ -352,7 +352,7 @@
 </li>
 <li class="cnjnctn-col"> <h5>Business or general employment-related courses, programs or training </h5> 
 <div id="ajax-general">
-<p>Courses, programs or training for general employment-related, even if not directly related to an employer's business, which are taken mainly for the employer's benefit.</p>
+<p>Courses, programs or training for general employment-related purposes, even if not directly related to an employer's business, which are taken mainly for the employer's benefit.</p>
 <p>This includes fees the employer pays for stress management, employment equity, first aid, and language courses.</p>
 </div>
 </li>
@@ -386,9 +386,9 @@
 <li class="cnjnctn-col">
 
 <h3>Benefit provided to one of your employee's family members</h3>
-<details><summary>Situation: You provide <strong>free or reduced tuition fees</strong> to your employee’s family members</summary>
+<details><summary>Situation: You provide <strong>free tuition or reduced tuition fees</strong> to your employee’s family members</summary>
 <h4>Non-taxable situation</h4>
-<p>If you provide free or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable to the employee if <strong>all</strong> of the following apply:</p>
+<p>If you provide free  tuition or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable to the employee if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">You and your employee <strong>deal at arm’s length</strong></li>
 <li class="cnjnctn-col">Benefit is <strong>not</strong> provided as a substitute for salary, wages or other remuneration of the employee</li>
