--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -230,6 +230,11 @@
                            <td>Type of remuneration </td>
                         </tr>
                        
+		 <tr>
+                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/research-grants.html">Payments related to research grants</a> </td>
+                           <td>Type of remuneration </td>
+                        </tr>
+
  			<tr>
                            <td><a href="agriculture.html">Payments to agriculture and horticulture workers</a> <br /> </td>
                            <td>Type of employment </td>
