--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -182,6 +182,11 @@
  </a>
 <a href="pension.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to pension or superannuation
 </a></li>
+	
+<li><a href="research-grants.html" class="hidden-xs hidden-sm"> Payments related to research grants
+ </a>
+<a href="research-grants.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to research grants
+</a></li>
 
 <li><a href="deferral.html" class="hidden-xs hidden-sm"> Payments related to salary deferral arrangements
  </a>
