--- a/payroll/calculate/payment/research-grants.html
+++ b/payroll/calculate/payment/research-grants.html
@@ -308,11 +308,15 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
 <li class="cnjnctn-col">XXX </li>
 </ul>
 
-<p>Learn more:</p>
-<ul>
-<li><a href="/cra-arc/payroll/calculate/corrections/index.html">Employee repays you in the current year</a></li>
-<li><a href="/cra-arc/payroll/file/correct.html">Employee repays you in a previous year</a></li>
-</ul>
+<h3>Situation: You pay the cost for a <strong>research grant</strong> to a recipient (not your employee) to assist them to carry out research</h3>
+<h4>Non-taxable situation</h4>
+<p>If you pay the cost for research grant to a recipient to assist them to carry out research, this is <strong>not </strong>taxable as an employee benefit because there is no employee/employer relationship between the payer and the recipient.</p>
+<p>The recipient must report the amounts received on their T1 return.</p>
+<h5>Report on T4A slip</h5>
+<p>The payer must report the the full amount of the research grant paid on a T4A slip in the name of the recipient <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+ <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
+
+
 
  </li> 
  <li>
@@ -345,12 +349,13 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
                         <ul class="fa-ul mrgn-bttm-lg">
                          <li><span class="fas fa-check fa-li fa-lg text-success"></span> Withhold CPP, EI or income tax deductions</li>
  		         <li><span class="fas fa-check fa-li fa-lg text-success"></span> Report on a T4A slip the:
-				<ul><li>box XX - Description </li>
-				    <li>box XX - Description</li>
-				    <li>box XX - Description</li>
+				<ul><li>Code 104 - Research grants</li>
+				    
  				  </ul></li>
                          
                      </ul>
+
+ 
       <p>Learn more on how to report: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>  </p>                
   </li>
   <li><h3 id="h_non">You are an employer or a payer and the recipient is a non-resident</h3>
