--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -284,8 +284,8 @@
 
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
-
 </div>
+<p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong> <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/research-grants.html">Payments related to research grants</a></p>
 
 <p>You may provide educational assistance to your employee, a former employee or an employee's family member. </p>
 
@@ -432,23 +432,7 @@
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
 </li>
-<li class="cnjnctn-col">
-<h3>Benefit provided to a recipient</h3>
-<details><summary>Situation: You pay the cost for a <strong>research grant</strong> to a recipient (not your employee) to assist them to carry out research</summary>
-<h4>Non-taxable situation</h4>
-<p>If you pay the cost for research grant to a recipient to assist them to carry out research, this is <strong>not </strong>taxable as an employee benefit because there is no employee/employer relationship between the payer and the recipient.</p>
-<p>The recipient must report the amounts received on their T1 return.</p>
-<h5>Report on T4A slip</h5>
-<p>The payer must report the the full amount of the research grant paid on a T4A slip in the name of the recipient <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
- <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
-<p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
 
-<h4>Taxable situation</h4>
-<p>If the benefit is <strong>not </strong> a research grant, the benefit is taxable.</p>
-<p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
-
-</details>
-</li>
 </ul>
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
@@ -596,7 +580,7 @@
  <li class="cnjnctn-col">
     <h3 class="mrgn-tp-sm text-muted h4">Future employee or family member: T4A slip <span class="wb-inv">: Option 3</span></h3>
     <p>Report on: </p>  <ul class="fa-ul">
-                       <li><span class="fas fa-check fa-li text-success"></span>Code 104 - Research grants</li>
+                     
                          <li><span class="fas fa-check fa-li text-success"></span>Code 105 - Scholarships, fellowships, bursaries, and artists' project grants</li>
 	    <li><span class="fas fa-check fa-li text-success"></span>Code 210 - Postdoctoral fellowship income</li>
                       
