--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -385,7 +385,7 @@
 </li>
 <li class="cnjnctn-col">
 
-<h3>Benefit provided to one of your employee's family members</h3>
+<h3>Benefit provided to your employee's family members</h3>
 <details><summary>Situation: You provide <strong>free tuition or reduced tuition fees</strong> to your employee’s family members</summary>
 <h4>Non-taxable situation</h4>
 <p>If you provide free  tuition or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable to the employee if <strong>all</strong> of the following apply:</p>
